--- a/ConsumerAF/local.settings.json
+++ b/ConsumerAF/local.settings.json
@@ -4,6 +4,6 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "QueueName": "samplequeue1",
-    "ServiceBusConnection": ""
+    "ServiceBusConnection": "put REAL SB connection string"
   }
 }
