--- a/RecieveApplicationAF/local.settings.json
+++ b/RecieveApplicationAF/local.settings.json
@@ -5,6 +5,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "apiUrl": "http://localhost:7260",
     "apiEndpoint": "/api/ConsumerAF",
-    "ServiceBusConnection": ""
+    "ServiceBusConnection": "put REAL SB connection string"
   }
 }
