--- a/SAProcessor/local.settings.json
+++ b/SAProcessor/local.settings.json
@@ -3,9 +3,9 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-    "SAConnectionString": "",
+    "SAConnectionString": "put REAL SA connection string",
     "FeederContainer1": "feed1",
     "FeederContainer2": "feed2",
-    "ServiceBusConnection": ""
+    "ServiceBusConnection": "put REAL SB connection string"
   }
 }
