--- a/ConsumerAF/local.settings.json
+++ b/ConsumerAF/local.settings.json
@@ -4,6 +4,6 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "QueueName": "samplequeue1",
-    "ServiceBusConnection": "put REAL SB connection string"
+    "ServiceBusConnection": "Endpoint=sb://sb-spacetest-001.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=CuNW9ZGVaIJdzQ1rYth8kmCPXUdFZ/180+ASbFceurk="
   }
 }
