--- a/RecieveApplicationAF/local.settings.json
+++ b/RecieveApplicationAF/local.settings.json
@@ -5,6 +5,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "apiUrl": "http://localhost:7260",
     "apiEndpoint": "/api/ConsumerAF",
-    "ServiceBusConnection": "put REAL SB connection string"
+    "ServiceBusConnection": "Endpoint=sb://sb-spacetest-001.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=CuNW9ZGVaIJdzQ1rYth8kmCPXUdFZ/180+ASbFceurk="
   }
 }
